--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
         <li><a href="page.html">Link 3</a></li>
         <li><a href="page.html">Link 4</a></li>
         <li><a href="page.html">Link 5</a></li>
+        <li><a href="page.html">Link 5</a></li>
+        <li><a href="page.html">Link 5</a></li>
+        <li><a href="page.html">Link 5</a></li>
     </ul>
 </nav></div>
 	<div class="class-example row">
